# Gamma_instructment

./: CMakeLists.txt  README.md  main.cc  run.mac  vis.mac
include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  RunAction.hh  SteppingAction.hh
src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
